--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Glide Datatables</title>
   </head>
   <body>
-    <script src="function.js"></script>
+    <script src="functionorigin.js"></script>
     <script src="driver.js"></script>
   </body>
 </html>
